2016/05/04:
In the Coq backend, split the largest definitions into smaller
ones. This circumvenents a limitation of vm_compute on 32 bit
machines. This also enables us to perform sharing between
definitions, so that the generated files are much smaller.

2016/04/10:
When printing a grammar (which is done by the --only-preprocess options),
remove the leading bar '|', for compatibility with yacc and bison.

2016/03/11:
In the code back-end, generate type annotations when extracting a semantic
value out of the stack. When working with a semantic value of some function
type, OCaml would incorrectly warn that this function does not use its
argument. This warning should now be gone.

2016/03/03:
Makefile changes, so as to support ocamlbuild 4.03, which seems to have
stricter hygiene rules than previous versions.

2015/12/30:
Prevented an incorrect installation that would take place if USE_OCAMLFIND
was given during "make all" but not during "make install". Added a command
line directive --suggest-ocamlfind.

2015/11/11:
Fixed a severe bug in Menhir 20151110 which (when using the code back-end)
could cause a generated parser to crash. Thanks to ygrek for reporting the
bug.

2015/11/11:
The code produced by version XXXXXXXX of menhir --table can now be linked only
against a matching version of MenhirLib. If an incorrect version of MenhirLib
is installed, the OCaml compiler should complain that
[MenhirLib.StaticVersion.require_XXXXXXXX] is undefined.

2015/11/10:
Optimized the computation of $symbolstartpos, based on a couple of assumptions
about the lexer. (See the manual.)

2015/11/04:
Modified the treatment of %inline so that the positions that are computed are
the same, regardless of whether %inline is used. This property did not hold
until now. It now does. Of course, this means that the positions computed by
the new Menhir are not the same as those computed by older versions of Menhir.

2015/11/04: