@@ -115,9 +115,6 @@
 
 * Produce well-chosen (predictable) names for anonymous rules?
 
-* The construction of an anonymous rule should work also when the
-  body has parameters (should produce a parameterized rule).
-
 * In the standard library, possibly rename "anonymous" and "embedded" and
   document them. The non-inline version allows embedding an action in the
   middle of a rule.
