@@ -1,0 +1,3 @@
+open Syntax
+
+val transform_partial_grammar: partial_grammar -> partial_grammar
