@@ -1,3 +1,7 @@
+2016/05/18:
+Anonymous rules now work also when used inside a parameterized rule.
+(This did not work until now.)
+
 2016/05/04:
 In the Coq backend, split the largest definitions into smaller
 ones. This circumvenents a limitation of vm_compute on 32 bit
